# life_win32

./: .gitattributes  .gitignore  BUILD.gn  LICENSE.md  Makefile  README.md
src/: gol_win32.c  gol_win32.cc  gol_win32.h  resource.h  resource.rc  version.h
