# Copyright 2026 Alex313031

group("game_of_life") {
  public_deps = [
    ":gol_win32",
  ]
}

executable("gol_win32") {
  configs -= [ "//build/config/win:console_subsystem" ]
  configs += [
    "//build/config/win:windowed_subsystem",
    ":gol_config",
  ]
  sources = [
    "src/gol_win32.cc",
    "src/resource.rc",
  ]
}

config("gol_config") {
  include_dirs = [
    "./src",
  ]
  # Track unused functions
  cflags = [ "-Wunused-function" ]
}
